==> wagiminator/MCU-Templates/STM32C011/template/src/system.c <==
#include "system.h"

void SYS_init(void) {
  // Init system clock
  #if SYS_CLK_INIT > 0
  #if F_CPU > 24000000
  FLASH->ACR |= 0b001;                          // FLASH latency: one wait state
  #endif
  CLK_init();
  #endif

  // Init SYSTICK
  #if SYS_TICK_INIT > 0
  SysTick->CTRL = SysTick_CTRL_ENABLE | SysTick_CTRL_CLKSOURCE;
  #endif

  // Enable GPIO
  #if SYS_GPIO_EN > 0
  RCC->IOPENR = RCC_IOPENR_GPIOAEN | RCC_IOPENR_GPIOBEN | RCC_IOPENR_GPIOCEN
              | RCC_IOPENR_GPIODEN | RCC_IOPENR_GPIOFEN;
  #endif
}

void CLK_init_HSI(void) {
  RCC->CR = CLK_DIV | RCC_CR_HSION;                       // set HSI divisor
}

void CLK_init_HSE(void) {
  RCC->CR |= RCC_CR_HSEON;                                // Turn on HSE
  while(!(RCC->CR & RCC_CR_HSERDY));                      // wait till HSE is ready
  RCC->CFGR = 0b001;                                      // HSE as system clock source
  while((RCC->CFGR & RCC_CFGR_SWS_Msk) != (0b001<<3));    // Wait for HSE
}

void RTC_init_LSE(void) {
  RCC->APBENR1 |= RCC_APBENR1_RTCAPBEN; // enable RTC module clock
  RCC->CSR1     = RCC_CSR1_LSEON        // turn on LSE
                | (0b01<<8)             // set LSE as clock source
                | RCC_CSR1_RTCEN;       // enable RTC
  RTC->WPR = 0xCA;                      // remove RTC register write protection
  RTC->WPR = 0x53;
}

void DLY_ticks(uint32_t n) {
  SysTick->LOAD = n;
  SysTick->VAL  = 0;
  while(!(SysTick->CTRL & SysTick_CTRL_COUNTFLAG));
}

void IWDG_start(uint16_t ms) {
  LSI_enable();                         // enable internal low-speed clock (LSI)
  IWDG->KR   = 0x5555;                  // allow register modification
  while(IWDG->SR & IWDG_SR_PVU);        // wait for prescaler register to be ready
  IWDG->PR   = 0b100;                   // set LSI clock prescaler 64 (~0.5kHz)
  while(IWDG->SR & IWDG_SR_RVU);        // wait for reload register to be ready
  IWDG->RLR  = ms >> 1;                 // set watchdog counter reload value
  IWDG->KR   = 0xAAAA;                  // load reload value into watchdog counter
  IWDG->KR   = 0xCCCC;                  // enable IWDG
}

void IWDG_reload(uint16_t ms) {
  IWDG->KR   = 0x5555;                  // allow register modification
  while(IWDG->SR & IWDG_SR_RVU);        // wait for reload register to be ready
  IWDG->RLR = ms >> 1;                  // set watchdog counter reload value
  IWDG->KR   = 0xAAAA;                  // load reload value into watchdog counter
}

void STOP_WFI_now(void) {
  RCC->APBENR1 |= RCC_APBENR1_PWREN;    // enable low power control block clock
  SCB->SCR |= SCB_SCR_SLEEPDEEP_Msk;    // set deep sleep mode
  NVIC->ICPR[0] = 0xffffffff;           // clear pending interrupts
  EXTI->RPR1 = 0xffffffff;              // clear all EXTI rising edge pending flags
  EXTI->FPR1 = 0xffffffff;              // clear all EXTI falling edge pending flags
  PWR->CR1 &= ~PWR_CR1_LPMS;            // set low-power mode to stop
  __WFI();                              // wait for interrupt
  SCB->SCR &= ~SCB_SCR_SLEEPDEEP_Msk;   // unset deep sleep mode
}

void STOP_WFE_now(void) {
  RCC->APBENR1 |= RCC_APBENR1_PWREN;    // enable low power control block clock
  SCB->SCR |= SCB_SCR_SLEEPDEEP_Msk;    // set deep sleep mode
  NVIC->ICPR[0] = 0xffffffff;           // clear pending interrupts
  EXTI->RPR1 = 0xffffffff;              // clear all EXTI rising edge pending flags
  EXTI->FPR1 = 0xffffffff;              // clear all EXTI falling edge pending flags
  PWR->CR1 &= ~PWR_CR1_LPMS;            // set low-power mode to stop
  __WFE();                              // wait for event
  SCB->SCR &= ~SCB_SCR_SLEEPDEEP_Msk;   // unset deep sleep mode
}

void STDBY_WFI_now(void) {
  RCC->APBENR1 |= RCC_APBENR1_PWREN;    // enable low power control block clock
  SCB->SCR |= SCB_SCR_SLEEPDEEP_Msk;    // set deep sleep mode
  NVIC->ICPR[0] = 0xffffffff;           // clear pending interrupts
  PWR->CR1 = (PWR->CR1 & ~PWR_CR1_LPMS)
           | (0b011<<PWR_CR1_LPMS_Pos); // set low-power mode to standby
  PWR->SCR = 0b111111;                  // clear WUFx bits
  RTC->SCR = 0b111111;                  // clear RTC interrupt flags
  __WFI();                              // wait for interrupt
  SCB->SCR &= ~SCB_SCR_SLEEPDEEP_Msk;   // unset deep sleep mode
}

void STDBY_WFE_now(void) {
  RCC->APBENR1 |= RCC_APBENR1_PWREN;    // enable low power control block clock
  SCB->SCR |= SCB_SCR_SLEEPDEEP_Msk;    // set deep sleep mode
  NVIC->ICPR[0] = 0xffffffff;           // clear pending interrupts
  EXTI->RPR1 = 0xffffffff;              // clear all EXTI rising edge pending flags
  EXTI->FPR1 = 0xffffffff;              // clear all EXTI falling edge pending flags
  PWR->CR1 = (PWR->CR1 & ~PWR_CR1_LPMS)
           | (0b011<<PWR_CR1_LPMS_Pos); // set low-power mode to standby
  PWR->SCR = 0b111111;                  // clear WUFx bits
  RTC->SCR = 0b111111;                  // clear RTC interrupt flags
  __WFE();                              // wait for event
  SCB->SCR &= ~SCB_SCR_SLEEPDEEP_Msk;   // unset deep sleep mode
}

void Reset_Handler(void) {
  uint32_t *src, *dst;

  // Set stack pointer
  asm volatile(
  " ldr r0, =_estack  \n\
    mov sp, r0        \n"
    : : : "r0", "memory"
  );

  // Configure vector table location
  SCB->VTOR = (uint32_t)vectors;

  // Copy data from FLASH to RAM
  src = &_sidata;
  dst = &_sdata;
  while(dst < &_edata) *dst++ = *src++;

  // Clear uninitialized variables
  #if SYS_CLEAR_BSS > 0
  dst = &_sbss;
  while(dst < &_ebss) *dst++ = 0;
  #endif

  // Init system
  SYS_init();

  // C++ Support
  #ifdef __cplusplus
  __libc_init_array();
  #endif

  // Start main function
  main();
  while(1);
}
