==> wagiminator/MCU-Templates/CH32V103/template/include/system.c <==
#include "system.h"

void SYS_init(void) {
  // Init system clock
  #if SYS_CLK_INIT > 0
  CLK_init();
  #endif

  // Init SYSTICK
  #if SYS_TICK_INIT > 0
  STK_init();
  #endif

  // Enable GPIO
  #if SYS_GPIO_EN > 0
  RCC->APB2PCENR |= RCC_IOPAEN | RCC_IOPBEN | RCC_IOPCEN | RCC_IOPDEN;
  #endif
}

void CLK_init_HSI(void) {
  RCC->INTR  = 0x009F0000;                                // Clear ready flags
  RCC->CFGR0 = RCC_HPRE_DIV1                              // HCLK = SYSCLK
             | RCC_PPRE2_DIV1                             // PCLK2 = HCLK
             | RCC_PPRE1_DIV1                             // PCLK1 = HCLK
             | RCC_SW_HSI;                                // HSI as system clock source
  while((RCC->CFGR0 & RCC_SWS));                          // Wait for HSI
  FLASH->ACTLR = FLASH_ACTLR_PRFTBE|FLASH_ACTLR_LATENCY_0;// Enable prefetch buffer, no delay
}

void CLK_init_HSE(void) {
  #if F_CPU <= 24000000
  FLASH->ACTLR = FLASH_ACTLR_PRFTBE|FLASH_ACTLR_LATENCY_0;// Enable prefetch buffer, no delay
  #elif F_CPU <= 48000000
  FLASH->ACTLR = FLASH_ACTLR_PRFTBE|FLASH_ACTLR_LATENCY_1;// Enable prefetch buffer, delay 1
  #else
  FLASH->ACTLR = FLASH_ACTLR_PRFTBE|FLASH_ACTLR_LATENCY_2;// Enable prefetch buffer, delay 2
  #endif

  RCC->INTR    = 0x009F0000;                              // Clear ready flags
  RCC->CTLR   |= RCC_HSEON;                               // Turn on HSE
  while(!(RCC->CTLR & RCC_HSERDY));                       // wait till HSE is ready
  RCC->CFGR0   = RCC_HPRE_DIV1                            // HCLK = SYSCLK
               | RCC_PPRE2_DIV1                           // PCLK2 = HCLK
               | RCC_PPRE1_DIV1                           // PCLK1 = HCLK
               | RCC_SW_HSE;                              // HSE as system clock source
  while((RCC->CFGR0 & RCC_SWS) != (uint32_t)0x04);        // Wait for HSE
}

void RTC_init_LSE(void) {
  RCC->BDCTLR |= RCC_LSEON;             // enable LSE
  while(!(RCC->BDCTLR & RCC_LSERDY));   // wait till LSE is ready
  RCC->BDCTLR |= RCC_RTCSEL_LSE;        // select LSE as RTC clock source
  RCC->BDCTLR |= RCC_RTCEN;             // enable RTC
  RTC->CTLRL &= ~RTC_CTLRL_RSF;         // start synchronization
  while((~RTC->CTLRL) & (RTC_CTLRL_RSF | RTC_CTLRL_RTOFF));   // wait ready
  RTC->CTLRL |= RTC_CTLRL_CNF;          // enter configuration mode
  RTC->PSCRL  = LSE_VALUE;              // set prescaler for 1 second ticks
  RTC->PSCRH  = 0;
  RTC->CTLRL &= ~RTC_CTLRL_CNF;         // exit configuration mode
}

void DLY_ticks(uint32_t n) {
  uint32_t end = STK->CNTL + n;
  while(((int32_t)(STK->CNTL - end)) < 0);
}

void IWDG_start(uint16_t ticks) {
  LSI_enable();                         // enable internal low-speed clock (LSI)
  IWDG->CTLR = 0x5555;                  // allow register modification
  while(IWDG->STATR & IWDG_PVU);        // wait for clock register to be ready
  IWDG->PSCR = 0b100;                   // set LSI clock prescaler 64
  while(IWDG->STATR & IWDG_RVU);        // wait for reload register to be ready
  IWDG->RLDR = ticks;                   // set watchdog counter reload value
  IWDG->CTLR = 0xAAAA;                  // load reload value into watchdog counter
  IWDG->CTLR = 0xCCCC;                  // enable IWDG
}

void IWDG_reload(uint16_t ticks) {
  IWDG->CTLR = 0x5555;                  // allow register modification
  while(IWDG->STATR & IWDG_RVU);        // wait for reload register to be ready
  IWDG->RLDR = ticks;                   // set watchdog counter reload value
  IWDG->CTLR = 0xAAAA;                  // load reload value into watchdog counter
}

void STOP_WFI_now(void) {
  PWR->CTLR   &= ~PWR_CTLR_PDDS;        // set power-down mode to STOP
  PFIC->SCTLR |= PFIC_SLEEPDEEP;
  __WFI();                              // wait for interrupt
  PFIC->SCTLR &= ~PFIC_SLEEPDEEP;       // unset deep sleep mode
}

void STOP_WFE_now(void) {
  PWR->CTLR   &= ~PWR_CTLR_PDDS;        // set power-down mode to STOP
  PFIC->SCTLR |= PFIC_SLEEPDEEP;
  __WFE();                              // wait for event
  PFIC->SCTLR &= ~PFIC_SLEEPDEEP;       // unset deep sleep mode
}

void STDBY_WFI_now(void) {
  PWR->CTLR   |= PWR_CTLR_PDDS;         // set power-down mode to STANDBY
  PFIC->SCTLR |= PFIC_SLEEPDEEP;
  __WFI();                              // wait for interrupt
  PFIC->SCTLR &= ~PFIC_SLEEPDEEP;       // unset deep sleep mode
}

void STDBY_WFE_now(void) {
  PWR->CTLR   |= PWR_CTLR_PDDS;         // set power-down mode to STANDBY
  PFIC->SCTLR |= PFIC_SLEEPDEEP;
  __WFE();                              // wait for event
  PFIC->SCTLR &= ~PFIC_SLEEPDEEP;       // unset deep sleep mode
}

void reset_handler(void) {
  uint32_t *src, *dst;

  // Set pointers, vectors, processor status, and interrupts
  asm volatile(
  " .option push                \n\
    .option norelax             \n\
    la gp, __global_pointer$    \n\
    .option pop                 \n\
    la sp, _eusrstack           \n\
    li a0, 0x88                 \n\
    csrw mstatus, a0            \n\
    la a0, vectors              \n\
    ori a0, a0, 1               \n\
    csrw mtvec, a0              \n\
    csrw mepc, %[main]          \n"
    : : [main] "r" (main) : "a0" , "memory"
  );

  // Copy data from FLASH to RAM
  src = &_data_lma;
  dst = &_data_vma;
  while(dst < &_edata) *dst++ = *src++;

  // Clear uninitialized variables
  #if SYS_CLEAR_BSS > 0
  dst = &_sbss;
  while(dst < &_ebss) *dst++ = 0;
  #endif

  // C++ Support
  #ifdef __cplusplus
  __libc_init_array();
  #endif

  // Init system
  SYS_init();

  // Return
  asm volatile("mret");
}
